--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -70,6 +70,7 @@ jobs:
             set -e
           fi
       - name: Send mail
+        # Define the following secrets for the repository: EMAIL_SERVER, EMAIL_USERNAME, EMAIL_PASSWORD, EMAIL_TO, EMAIL_LIST
         if: always()
         uses: dawidd6/action-send-mail@v2
         with:
