--- a/.github/workflows/delete-runs-schedule.yml
+++ b/.github/workflows/delete-runs-schedule.yml
@@ -14,3 +14,4 @@ jobs:
           token: ${{ secrets.AUTH_PAT }}
           repository: ${{ github.repository }}
           retain_days: 30
+          keep_minimum_runs: 0
