Change scheduled validate to only list errors. Add validate-errors workflow.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -40,7 +40,9 @@ jobs:
       # Check descriptions for schema conformance
       - name: Schema compliance ...
         run: |
-          echo "Schema compliance ..." > logs/validate.log
+          echo "Repo: ${{ github.repository }}" > logs/validate.log
+          echo "" >> logs/validate.log
+          echo "Schema compliance ..." >> logs/validate.log
           spase-validate -r . >> logs/validate.log
 
       # Check references
