--- a/.github/workflows/validate-errors.yml
+++ b/.github/workflows/validate-errors.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       # Install spase-resource-tools
       - uses: actions/setup-node@v2
+        with:
+          node-version: '14'      
       - run: npm install
       - name: Get current date
         id: date
