--- a/.github/workflows/validate-schedule.yml
+++ b/.github/workflows/validate-schedule.yml
@@ -1,6 +1,6 @@
  # This is a basic workflow to help you get started with Actions
 
-name: SPASE Monthly Validation
+name: SPASE Monthly Errors Only Validation
 
 # Controls when the action will run. 
 # Use cron to run on the first of the month.
